--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -10,7 +10,7 @@ pylinkvalidator
 lxml~=5.3.1
 cssselect~=1.2.0
 openwisp-monitoring @ https://github.com/openwisp/openwisp-monitoring/tarball/1.2
-openwisp-controller @ https://github.com/openwisp/openwisp-controller/tarball/8288c23
+openwisp-controller @ https://github.com/openwisp/openwisp-controller/tarball/1.2
 django-redis~=5.4.0
 mock-ssh-server~=0.9.1
 channels_redis~=4.2.1
