--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -9,8 +9,8 @@ openwisp-utils[qa,selenium] @ https://github.com/openwisp/openwisp-utils/tarball
 pylinkvalidator
 lxml~=5.3.1
 cssselect~=1.2.0
-openwisp-monitoring @ https://github.com/openwisp/openwisp-monitoring/tarball/1.2
-openwisp-controller @ https://github.com/openwisp/openwisp-controller/tarball/1.2
+openwisp-monitoring @ https://github.com/openwisp/openwisp-monitoring/tarball/0200b6c
+openwisp-controller @ https://github.com/openwisp/openwisp-controller/tarball/8288c23
 django-redis~=5.4.0
 mock-ssh-server~=0.9.1
 channels_redis~=4.2.1
